--- a/public/views/rgbColorGame.html
+++ b/public/views/rgbColorGame.html
@@ -3,12 +3,17 @@
 <head>
 	<title>RGB Color Game</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/rgbColorGame.css">
+	<link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
 </head>
 <body>
 
+	<div class="container">
+	
 <h1>The Great
 	<br>
-	<span id="colorDisp">RGB</span>
+	
+		<span class='title'id="colorDisp">RGB</span>
+	
 	<br>
     Color Game
 </h1>
@@ -20,7 +25,7 @@
 	<button class="mode selected">Hard</button>
 </div>
 
-<div class="container">
+<div class="containersq">
 	<div class="square"></div>
 	<div class="square"></div>
 	<div class="square"></div>
@@ -28,9 +33,10 @@
 	<div class="square"></div>
 	<div class="square"></div>
 </div>
-
+	</div>
 
 
 <script type="text/javascript" src="/scripts/rgbfunc.js"></script>
+
 </body>
 </html>
