--- a/public/stylesheets/rgbColorGame.css
+++ b/public/stylesheets/rgbColorGame.css
@@ -1,10 +1,18 @@
+html{
+	background:white;
+}
 body {
-	background: #232323;
+	background: pink;
 	margin: 0;
-	font-family: "Avenir";
-
+	font-family: 'Courgette', cursive;
+	height:100%;
+	width:75%;
+	margin-left:12.5%;
 }
 
+.allcont{
+	background-color: pink;
+}
 .square{
 	width: 30%;
 	background: purple;
@@ -15,25 +23,42 @@ body {
 	transition: background 0.3s;
 	--webkit-transition: background 0.3s;
 	--moz-transition: background 0.3s;
+	box-shadow: -3px 3px 0 rgba(0,0,0,.2);
 }
 
 .container{
 	max-width: 600px;
-	margin: 20px auto;
+	margin-top:-10px!important;
+	margin: 0 auto;
+	background-color:pink;
+	height:55em;
 
 }
+.containersq{
+	max-width: 600px;
+	margin: auto;
+	background-color:pink;
+	margin-top:15px!important;
+
+}
+
 
 h1{
 	color: white;
 	text-align: center;
-	background: steelblue;
+	background: pink;
 	margin: 0;
 	font-weight: normal;
 	text-transform: uppercase;
-	line-height: 1.1;
+	line-height: 1.6;
 	padding: 20px 0;
+	
 }
-
+.title{
+	font-size:2em!important;
+	text-shadow: 5px 5px black;
+	font-weight: bold !important;
+}
 #colorDisp{
 	font-size: 200%;
 }
@@ -52,7 +77,7 @@ h1{
 
 .selected{
 	color: white;
-	background: steelblue;
+	background: pink;
 }
 
 button{
@@ -62,7 +87,7 @@ button{
 	font-family: "Avenir";
 	height: 100%;
 	font-weight: 700;
-	color: steelblue;
+	color: pink;
 	letter-spacing: 1px;
 	font-size: inherit;
 	transition: all .3s;
@@ -75,7 +100,7 @@ button{
 
  button:hover {
  	color: white;
- 	background: steelblue;
+ 	background: pink;
  }
 
 
